# PoffinMaster

./: .gitignore  CMakeLists.txt  PoffinMasterDS.qmlproject  PoffinMasterDS.qmlproject.qtds  ReadMe.md  privacy.md  qmlmodules  qtquickcontrols2.conf
Backend/: CMakeLists.txt  Serializable.h  backend.cpp  backend.h  berry.cpp  berry.h  berrylistmodel.cpp  berrylistmodel.h  poffin.cpp  poffin.h  poffinstatsmodel.cpp  poffinstatsmodel.h  serializable.h
Backend/Test/: CMakeLists.txt  tst_backend.cpp
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml
content/: App.qml  BasketDelegate.qml  BasketDelegateUI.ui.qml  BerryButton.qml  BerryButtonUI.ui.qml  CMakeLists.txt  PoffinStatDelegate.qml  PoffinStatDelegateUI.ui.qml  PoffinStatsChart.qml  PoffinStatsChartForm.ui.qml  Screen01.qml  Screen01.ui.qml
content/data/: backend.json
content/images/: berry_images.qrc  poffin_images.qrc
designer/Backend/: Backend.qml  Berry.qml  Poffin.qml  qmldir
i18n/: lang_en_US.ts  lang_fr_FR.ts
imports/: CMakeLists.txt
imports/PoffinMasterDS/: CMakeLists.txt  Constants.qml  qmldir
imports/PoffinMasterDS/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
